--- a/AqeviaClient/index.html
+++ b/AqeviaClient/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aqevia MUD Client</title>
-    <script src="https://cdn.socket.io/4.4.0/socket.io.min.js" integrity="sha384-TZYRgX6HMRQ7b4pkLbb5VFvJcL9I8UFvcy7b8AYfN0Mf0Tu0siiYVkhHCkVjF3Ox" crossorigin="anonymous"></script>
+    <script src="https://cdn.socket.io/4.4.0/socket.io.min.js" crossorigin="anonymous"></script>
     <style>
         body { font-family: Arial, sans-serif; }
         #messages { margin-bottom: 20px; border: 1px solid #ddd; padding: 10px; }
