--- a/AqeviaCore/AqeviaClient/index.html
+++ b/AqeviaCore/AqeviaClient/index.html
@@ -15,7 +15,7 @@
     <div id="messages"></div>
     <input type="text" id="input" placeholder="Type a message...">
     <script>
-        const socket = io('http://localhost:3000');
+        const socket = io('http://10.0.254.121:3000');
 
         socket.on('connect', () => {
             console.log('Connected to the server');
